# THIS FILE IS PART OF THE CYLC WORKFLOW ENGINE.
# Copyright (C) NIWA & British Crown (Met Office) & Contributors.
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <http://www.gnu.org/licenses/>.

[metadata]
name = cylc-doc
version = attr: cylc.doc.__version__
url = https://cylc.github.io/cylc-doc/stable/html/index.html
description = Documentation for the Cylc workflow engine
long_description = file: README.md
long_description_content_type = text/markdown
project_urls =
    Documentation = https://cylc.github.io/cylc-doc/stable/html/index.html
    Source = https://github.com/cylc/cylc-doc
    Tracker = https://github.com/cylc/cylc-doc/issues
license = GPL
platforms = any
classifiers =
    Environment :: Console
    Environment :: Web Environment
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Scientific/Engineering :: Atmospheric Science

[options]
packages = find_namespace:
include_package_data = True
python_requires = >=3.8
install_requires =
    cylc-sphinx-extensions>=1.4.1
    eralchemy==1.2.*
    hieroglyph>=2.1.0
    setuptools>=50
    sphinx>=4.4,!=7.2.*
    sphinx_rtd_theme>=1.0.0
    sphinxcontrib-svg2pdfconverter
    sphinxcontrib-spelling

[options.packages.find]
include = cylc*

[options.extras_require]
test =
    flake8>=5.0
    flake8-broken-line>=0.5.0
    flake8-bugbear>=22.7.0
    flake8-builtins>=1.5.0
    flake8-comprehensions>=3.10.0
    flake8-debugger>=4.1.0
    flake8-mutable>=1.2.0
    flake8-simplify>=0.19.0
watch =
    sphinx-autobuild
all =
    %(test)s
    %(watch)s
